-----------------------
- Syncs with Upstream v0.13.1
  * Fixes bug that can cause issues with disabled manual boot stanza referencing unreadable volumes
  * Accounts for new upstream initial logging function (ignored by RefindPlus)
  * Records selected EFI-based reboot options in the PreviousBoot variable
  * Implements support for setting systemd's LoaderDevicePartUUID EFI variable
  * Re-interpretes partial icon scaling fix implemented upstream  
- Syncs with Upstream v0.13.0
  * Limited to items that did not originate from RefindPlus (which are kept in their original form)
  * Does not adopt upstream reinterpretation of RefindPlus graphics protocol detection
  * This was implemented upstream in a new 'MyLibLocateProtocol' function
  * Maintains the maximum available screen resolution as the default screen resolution
  * Selected resolutions larger than screen size reported as possibility upstream have not been observed so far
  * To be borne in mind for changes if such reports are received
  * Still accepts upstream config files including the new 'Max' resolution option (which is disregarded)
  * All other upstream options incoporated including rebooting into firmware efi and the new manual stanza options
- Fixes Potential GNUEFI Build Failure
  * The feature that provides Strict UEFI 2.x GOP has only ever worked on versions compiled with Tianocore.
  * Now takes steps to prevent build failures on GNUEFI which might not find linked Tianocore resources.
- No Longer Saves RefindPlus Settings to Hardware NVRAM When Not Explicitly Set
  * Previously saved settings to Hardware NVRAM when Emulated NVRAM was not writable
  * This condition affected HFS+ setups and was implemented to help such users out
  * Now, the setting will simply not be saved in such instances
  * A debug log item will inform users that the setting was not saved
- Improves OpenProtocol and HandleProtocol Mapping
  * Fixes potential race condition in mapping structure