@@ -141,7 +141,7 @@ REFIT_CONFIG GlobalConfig = {
     /* DisableAMFI = */ FALSE,
     /* SupplyAPFS = */ FALSE,
     /* SuppressVerboseAPFS = */ FALSE,
-    /* EnforceAPFS = */ FALSE,
+    /* ReinforceAPFS = */ FALSE,
     /* ProtectMacNVRAM = */ FALSE,
     /* ScanOtherESP = */ FALSE,
     /* ShutdownAfterTimeout = */ FALSE,
