@@ -27,17 +27,17 @@ continue_on_warning| Proceeds as if a key is pressed after screen warnings (enab
 direct_gop_renderer| Provides a potentially improved GOP instance for certain GPUs.
 disable_amfi| Disables AMFI Checks on Mac OS if required.
 disable_mac_compat_check| Disables Mac version compatibility checks if required.
-enforce_apfs| Allows directly booting Big Sur as well as FileVault (without needing PreBoot).
 force_trim| Forces `TRIM` on non-Apple SSDs if required.
 ignore_previous_boot| Disables saving the last booted loader if not required.
 protect_mac_nvram| Stops UEFI from writing to Apple NVRAM as this may lead to damage.
 provide_console_gop| Fixes issues with GOP on some Legacy Macs.
-text_renderer| Provides a text renderer that allows text mode when not otherwise available.
+reinforce_apfs| Allows directly booting Big Sur as well as FileVault (without needing PreBoot).
 scale_ui| Provides control of UI element scaling.
 scan_other_esp| Allows other ESPs other than the RefindPlus ESP to be scanned for loaders.
 set_mac_boot_args| Allows arbitrary Mac OS boot argument strings .
 supply_apfs| Provides APFS file system capability if required.
-suppress_verbose_apfs| Supresses verbose APFS text on boot when `supply_apfs` is active if required.
+suppress_verbose_apfs| Supresses verbose APFS text on boot (if required when using `supply_apfs`).
+text_renderer| Provides a text renderer that allows text mode when not otherwise available.
 uga_pass_through| Provides UGA instance on GOP to permit EFIBoot with modern GPUs.
 
 ## Installation
