@@ -186,9 +186,9 @@
 # NB: Maintain the default naming pattern for APFS data volumes, 'VolName - Data', to
 # improve the reliability of this option in distinguishing between APFS partitions.
 #
-# Inactive when commented out (Does not enforce APFS requirements)
+# Inactive when commented out (Does not actively support APFS requirements)
 #
-#enforce_apfs
+#reinforce_apfs
 
 # Prevent UEFI Windows 'Secure Boot' from writing to Apple NVRAM. When this option is active,
 # RefindPlus will prevent UEFI Windows Secure Boot from writing to the NVRAM on Apple Firmware
